@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Jul  7 15:16:23 2008 -->
+<!--Generated with glade3 3.4.5 on Wed Jul 16 17:26:46 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="wndMain">
     <property name="title" translatable="yes">PSR Registration Shuffler</property>
@@ -14,12 +14,14 @@
             <property name="can_focus">True</property>
             <property name="scrollable">True</property>
             <child>
-              <widget class="GtkFileChooserWidget" id="dataDirChooser">
+              <widget class="GtkLabel" id="lblDataDirChooser">
                 <property name="visible">True</property>
-                <property name="action">GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER</property>
-                <property name="local_only">False</property>
-                <property name="use_preview_label">False</property>
-                <property name="preview_widget_active">False</property>
+                <property name="label" translatable="yes">Replace me with a directory chooser.
+
+&lt;b&gt;NOTE:&lt;/b&gt; &lt;i&gt;Unfortunately the application
+would crash if the chooser widget was
+directly embedded into the glade file.&lt;/i&gt;</property>
+                <property name="use_markup">True</property>
               </widget>
             </child>
             <child>
@@ -47,8 +49,9 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkHBox" id="hbox5">
+              <widget class="GtkHPaned" id="hpaned1">
                 <property name="visible">True</property>
+                <property name="can_focus">True</property>
                 <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow3">
                     <property name="visible">True</property>
@@ -63,6 +66,10 @@
                       </widget>
                     </child>
                   </widget>
+                  <packing>
+                    <property name="resize">False</property>
+                    <property name="shrink">False</property>
+                  </packing>
                 </child>
                 <child>
                   <widget class="GtkVBox" id="vbox3">
@@ -191,7 +198,8 @@
                     </child>
                   </widget>
                   <packing>
-                    <property name="position">1</property>
+                    <property name="resize">True</property>
+                    <property name="shrink">False</property>
                   </packing>
                 </child>
               </widget>
@@ -352,39 +360,39 @@
                 <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <child>
-                  <widget class="GtkVBox" id="vbox2">
+                  <widget class="GtkViewport" id="viewport1">
                     <property name="visible">True</property>
-                    <property name="spacing">6</property>
+                    <property name="resize_mode">GTK_RESIZE_QUEUE</property>
                     <child>
-                      <widget class="GtkImage" id="image5">
+                      <widget class="GtkVBox" id="vbox2">
                         <property name="visible">True</property>
-                        <property name="stock">gtk-about</property>
+                        <property name="spacing">6</property>
+                        <child>
+                          <widget class="GtkImage" id="image5">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-about</property>
+                          </widget>
+                          <packing>
+                            <property name="expand">False</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <widget class="GtkLabel" id="label5">
+                            <property name="visible">True</property>
+                            <property name="yalign">0</property>
+                            <property name="label" translatable="yes">&lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;b&gt;Program name&lt;/b&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;
+&lt;i&gt;Short description&lt;/i&gt;
+
+Long copyright</property>
+                            <property name="use_markup">True</property>
+                            <property name="justify">GTK_JUSTIFY_CENTER</property>
+                            <property name="wrap">True</property>
+                          </widget>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
                       </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkLabel" id="label5">
-                        <property name="visible">True</property>
-                        <property name="yalign">0</property>
-                        <property name="label" translatable="yes">&lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;b&gt;PSR Registration Shuffler&lt;/b&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;
-&lt;i&gt;A program for organizing PSR registration bank files&lt;/i&gt;
-
-Copyright © 2008 Dennis Schulmeister
-http://ncc-1701a.homelinux.net
-
-This is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
-
-The software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-</property>
-                        <property name="use_markup">True</property>
-                        <property name="justify">GTK_JUSTIFY_CENTER</property>
-                        <property name="wrap">True</property>
-                      </widget>
-                      <packing>
-                        <property name="position">1</property>
-                      </packing>
                     </child>
                   </widget>
                 </child>
